--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Mokoto;
+  src: url(@/assets/fonts/mokoto/mokoto.otf);
+}
+
 .v-application{
   background-color: #fff;
 }
