--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Merriweather+Sans");
+
 @font-face {
   font-family: Mokoto;
   src: url(@/assets/fonts/mokoto/mokoto.otf);
